move ratings directive to src folder

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="alfanso">
+<html ng-app="app">
 <head>
 	<title>AngularJS Star Rating Directive</title>
 </head>
@@ -7,41 +7,14 @@
 	<div ng-controller="DemoCtrl">
 		<ul>
 			<li ng-repeat="rating in ratings">
-				<div av-rating data-total-rating="5" data-current-rating="{{ rating }}"></div>
+				<div av-star-rating data-total-rating="5" data-current-rating="{{ rating }}"></div>
 			</li>
 		</ul>
 	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+	<script type="text/javascript" src="src/star-rating.js"></script>
 	<script type="text/javascript">
-		angular.module("alfanso", [])
-			.directive("avRating", function()
-			{
-				var filledStar = "<span>&#9733;</span>",
-					emptyStar  = "<span>&#9734;</span>";
-
-				return {
-					restrict: "EA",
-					link: function(scope, el, attr)
-					{
-						attr.$observe("currentRating", function()
-						{
-							var 
-							i = 0, 
-							html = [],
-							totalRating = attr.totalRating,
-							currentRating = Math.round(Math.min(attr.currentRating, totalRating));
-
-							for ( ; i < currentRating; i++)
-								html.push( filledStar );
-
-							for ( ; i < totalRating; i++)
-								html.push( emptyStar );
-
-							el.html( html.join("") );
-						});
-					}
-				};
-			})
+		angular.module("app", ['alfanso'])
 			.controller("DemoCtrl", function($scope){
 				var ratings = [];
 
